--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,8 +45,7 @@
   display: flex;
   align-items: center;
   margin-left: 3vw;
-  color: #3c4146;
-  text-transform: uppercase;
+  color: #0d055a;
   padding-left: 1vw;
   padding-right: 2vw; }
 
@@ -58,8 +57,8 @@
 .gear {
   font-family: "webSymbolsRegular";
   margin: 0 1.5vw 0 0;
-  font-size: 4vw;
-  color: rgba(255, 146, 3, 0.8);
+  font-size: 5vw;
+  color: #0d055a;
   text-shadow: 0px 0px 3px #ccc; }
 
 .rodar {
@@ -91,7 +90,7 @@
   margin-left: 2vw;
   font-weight: bold;
   font-style: italic;
-  text-shadow: 2px 2px 5px rgba(255, 146, 3, 0.8); }
+  text-shadow: 2px 2px 5px #484848; }
 
 .desplazamiento {
   animation-name: desplazamiento;
@@ -125,13 +124,13 @@
 
 .logo a {
   text-decoration: none;
-  color: #3c4146;
-  font-size: 4vw;
+  color: #212529;
+  font-size: 6vw;
   font-family: Arial, Helvetica, sans-serif;
   font-style: italic;
   font-weight: bold;
   font-size: 4.5vw;
-  text-shadow: 2px 2px 5px #ffbe50; }
+  text-shadow: 2px 2px 5px #ccc; }
 
 .logo:hover a {
   animation: fromRight 300ms linear; }
@@ -166,9 +165,9 @@
   font-style: italic;
   text-align: center;
   margin: 20px 0px 20px 0px;
-  background-color: #212529;
-  color: #ffbe50;
-  padding: 5px; }
+  background-color: #f8f9fa;
+  color: #0d055a;
+  padding: 10px; }
 
 #proyectos {
   display: grid;
@@ -207,11 +206,11 @@
   max-width: 35vw; }
 
 .btnColorUno {
-  background-color: rgba(255, 146, 3, 0.8);
+  background-color: #0d055a;
   font-family: "Nunito", sans-serif; }
 
 .btnColorUno:hover {
-  background-color: #ffbe50; }
+  background-color: #00538c; }
 
 .btnColorDos {
   background-color: #a8a8a8;
@@ -222,8 +221,7 @@
 
 #footer {
   max-width: 100vw;
-  height: 25vh;
-  border-top: 1.5px solid rgba(255, 146, 3, 0.8); }
+  height: 25vh; }
 
 .icono {
   height: 7vh;
@@ -240,7 +238,7 @@
 .logoFooter {
   order: 1;
   text-decoration: none;
-  color: #3c4146;
+  color: #ccc;
   font-size: 4vw;
   font-family: Arial, Helvetica, sans-serif;
   font-style: italic;
@@ -250,8 +248,8 @@
   text-shadow: 2px 2px 5px #a8a8a8; }
 
 .logoFooter:hover {
-  color: #ffbe50;
-  text-shadow: 2px 2px 5px rgba(255, 146, 3, 0.8); }
+  color: #00538c;
+  text-shadow: 2px 2px 5px #0d055a; }
 
 .pie {
   display: flex;
