--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -34,9 +34,9 @@ $colorAzulPetroleo: #00538c;
 /*Color del logo*/
 $colorUno: #3c4146;
 /* color de sombra del logo Portfolio, y titulos */
-$colorDos: #ffbe50;
+$colorDos: #00538c;
 /* color del botón enviar, simbolo 1 y sombra del simbolo 2 */
-$colorTres: rgba(255, 146, 3, 0.8);
+$colorTres: rgb(13, 5, 90);
 /*Colores de sombras*/
 $colorCuatro: #ccc;
 $colorCinco: #a8a8a8;
@@ -93,8 +93,8 @@ $fuenteCuatro: "WebSymbolsRegular";
     display: flex;  
     align-items: center;
     margin-left: 3vw;
-    color: $colorUno;
-    text-transform: uppercase;
+    color: $colorTres;
+    // text-transform: uppercase;
     padding-left: 1vw;
     padding-right: 2vw;}
 
@@ -107,10 +107,15 @@ $fuenteCuatro: "WebSymbolsRegular";
   .gear{
     font-family: "webSymbolsRegular";
     margin: 0 1.5vw 0 0;
-    font-size: 4vw;
+    font-size: 5vw;
     color: $colorTres;
     text-shadow: 0px 0px 3px $colorCuatro;
     }
+
+  // .imgReact{
+  //   width: 6vw;
+  //   height: auto;
+  // }  
 
   .rodar{
     animation-name: rodar;
@@ -150,7 +155,7 @@ $fuenteCuatro: "WebSymbolsRegular";
     margin-left: 2vw;
     font-weight: bold;
     font-style: italic;
-    text-shadow: 2px 2px 5px $colorTres; }
+    text-shadow: 2px 2px 5px $colorSeis; }
 
   .desplazamiento{
     animation-name: desplazamiento;
@@ -193,13 +198,13 @@ $fuenteCuatro: "WebSymbolsRegular";
 
   .logo a {
     text-decoration: none;
-    color: $colorUno;
-    font-size: 4vw;
+    color: $colorDark;
+    font-size: 6vw;
     font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
     font-weight: bold;
     font-size: 4.5vw;
-    text-shadow: 2px 2px 5px $colorDos; }
+    text-shadow: 2px 2px 5px $colorCuatro; }
   
   .logo:hover a{
     animation: fromRight 300ms linear;
@@ -241,9 +246,9 @@ $fuenteCuatro: "WebSymbolsRegular";
     font-style: italic;
     text-align: center;
     margin: 20px 0px 20px 0px;
-    background-color: $colorDark;
-    color: $colorDos ;
-    padding: 5px;
+    background-color: $colorLight;
+    color: $colorTres ;
+    padding: 10px;
   } 
 
   #proyectos {
@@ -305,7 +310,8 @@ $fuenteCuatro: "WebSymbolsRegular";
   #footer {
    max-width: 100vw;
    height: 25vh;
-   border-top: 1.5px solid $colorTres; } 
+  //  border-top: 2px solid $colorTres; 
+  } 
 
   .icono {
    height: 7vh;
@@ -322,7 +328,7 @@ $fuenteCuatro: "WebSymbolsRegular";
   .logoFooter{
     order: 1;
     text-decoration: none;
-    color: $colorUno;
+    color: $colorCuatro;
     font-size: 4vw;
     font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
