--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -243,13 +243,13 @@ $fuenteCuatro: "WebSymbolsRegular";
 
 .acerca-de .foto .nombre {
 	color: #545454;
-	font-weight: 300;
+	font-weight: 3000;
 	font-size: 18px;
 	letter-spacing: 2px;
 }
 
 .acerca-de .infoAcercaDe .titulo {
-	color: $colorDos;
+	color: #545454;
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 300;
 	font-size: 40px;
@@ -263,7 +263,7 @@ $fuenteCuatro: "WebSymbolsRegular";
 .acerca-de .infoAcercaDe {
 	font-size: 18px;
 	font-weight: 600;
-	color: $colorDos;
+	color: #545454;
 	margin-bottom: 10px;
 }
 
