--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -3,7 +3,9 @@
     list-style: none;
     text-decoration: none;
     margin: 0px;
-    padding: 0px; }
+    padding: 0px; 
+    box-sizing: border-box;
+  }
 
 // :root {
 //   /*Variables globales en CSS*/
@@ -281,217 +283,226 @@ $fuenteCuatro: "WebSymbolsRegular";
   padding: 10px;
 } 
 
-  #proyectos {
-    display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(3,1fr);
-    gap: 30px;
-    margin-bottom: 5vh;
-    justify-content: center; }
+#proyectos {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  //No son necesarias estas propiedades
+  //display: grid;
+  // grid-template-rows: repeat(2, 1fr);
+  // grid-template-columns: repeat(3,1fr);
+  // gap: 30px;
+  // margin-bottom: 5vh;
+  // justify-content: center;
+  margin: 0 auto; 
+}
   
-  .proyecto{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    border: 2px solid $colorCuatro;
-    border-radius: 5px;
-    box-shadow: 0px 0px 5px $colorCuatro inset;
-  }
+.proyecto{
+  display: flex;
+  width: 30%;
+  margin: 1rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: 2px solid $colorCuatro;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px $colorCuatro inset;
+}
 
-  .img {  /*640 ancho x 426 alto*/
-    width: 100%;
-    height: auto;
-    padding: 5px;
-    border-radius: 10px; }
-  
-  .info{
-      font-style: var(--fuenteDos);
-      line-height: 10px;
-      margin: 15px 0px 15px 0px;    
-  }
+.img {  /*640 ancho x 426 alto*/
+  width: 100%;
+  height: auto;
+  padding: 5px;
+  border-radius: 10px; }
 
-  .cajaFormulario {
-    margin-bottom: 2rem;
-    border-radius: 10px;
-    box-shadow: 5px 5px 15px 5px #484848;
-    max-width: 50vw;
-  }
+.info{
+  font-style: var(--fuenteDos);
+  line-height: 10px;
+  margin: 15px 0px 15px 0px;    
+}
 
-  .btnColorUno{
-      background-color: $colorTres;
-      font-family: $fuenteUno;
-  }
+.cajaFormulario {
+  margin-bottom: 2rem;
+  border-radius: 10px;
+  box-shadow: 5px 5px 15px 5px #484848;
+  max-width: 50vw;
+}
 
-  .btnColorUno:hover{
-      background-color: $colorDos;
-  }
+.btnColorUno{
+    background-color: $colorTres;
+    font-family: $fuenteUno;
+}
 
-  .btnColorDos{
-      background-color: $colorCinco;
-      font-family: $fuenteUno;
-  }
+.btnColorUno:hover{
+    background-color: $colorDos;
+}
 
-  .btnColorDos:hover{
-      background-color: $colorCuatro;
-  }
+.btnColorDos{
+    background-color: $colorCinco;
+    font-family: $fuenteUno;
+}
+
+.btnColorDos:hover{
+    background-color: $colorCuatro;
+}
  
-  #footer {
-   max-width: 100vw;
-   height: 25vh;
-  //  border-top: 2px solid $colorTres; 
-  } 
+#footer {
+ max-width: 100vw;
+ height: 25vh;
+//  border-top: 2px solid $colorTres; 
+} 
 
-  .icono {
-   height: 7vh;
-   width: auto;
-   border: 1px solid $colorCinco;
-   border-radius: 50%;
-   padding: 4px; }  
+.icono {
+ height: 7vh;
+ width: auto;
+ border: 1px solid $colorCinco;
+ border-radius: 50%;
+ padding: 4px; }  
   
-  #footer .info {
-    text-align: center;
-    order: 2;
-    color: $colorCinco; }
+#footer .info {
+  text-align: center;
+  order: 2;
+  color: $colorCinco; }
 
-  .logoFooter{
-    order: 1;
-    text-decoration: none;
-    color: $colorCuatro;
-    font-size: 4vw;
-    font-family: Arial, Helvetica, sans-serif;
-    font-style: italic;
-    font-weight: bold;
-    font-size: 4.5vw;
-    margin-right: 2vw;
-    text-shadow: 2px 2px 5px $colorCinco;}
+.logoFooter{
+  order: 1;
+  text-decoration: none;
+  color: $colorCuatro;
+  font-size: 4vw;
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 4.5vw;
+  margin-right: 2vw;
+  text-shadow: 2px 2px 5px $colorCinco;}
 
 .logoFooter:hover{
   color: $colorDos;
-  text-shadow: 2px 2px 5px $colorTres; 
-}
+  text-shadow: 2px 2px 5px $colorTres; }
   
-  .pie{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 2vh;
-  }
-  
-  @media(max-width: 991.98px){
-    .img-fotoPerfil{
-      max-width: 35vw;
-    }
-    
-    /*Para sacar la transformación de los items del menú*/
-    .hoverMenu{
-      transition: none;
-    }  
-  
-    .hoverMenu:hover{
-      transform: none;
-    }
+.pie{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2vh;}
 
-    .logo{
-      padding-right: 3vw;
-    }
+@media(max-width: 1200px){
+  .proyecto{
+    width: 40%;
+  }
+}  
+
+@media(max-width: 991.98px){
+  // .img-fotoPerfil{
+  //   max-width: 35vw;}
+    
+  /*Para sacar la transformación de los items del menú*/
+  .hoverMenu{
+    transition: none;}  
+  
+  .hoverMenu:hover{
+    transform: none;}
+
+  .logo{
+    padding-right: 3vw;}
 
   .gear{
     font-size: 7vw; }
 
   .justBeNice{
     font-size: 10vw;
-    margin-left: 2vw;
-   }  
+    margin-left: 2vw;}  
 
   .logo a {
     font-size: 5.5vw; }
 
-    #proyectos {
-      display: grid;
-      grid-template-rows: repeat(2, 1fr);
-      grid-template-columns: repeat(2,1fr);
-    }
+  // #proyectos {
+  //   display: grid;
+  //   grid-template-rows: repeat(2, 1fr);
+  //   grid-template-columns: repeat(2,1fr);
+  // }
+
+  .proyecto{
+    width: 45%;
+  }
     
-    .cajaFormulario {
-      max-width: 75vw; }
+  .cajaFormulario {
+    max-width: 75vw; }
     
-    .logoFooter{
-      font-size: 6vw;
-    }  
+  .logoFooter{
+    font-size: 6vw;}  
+}
+
+@media(max-width: 768px){
+  .proyecto{
+    width: 75%;
+  }
+}
+
+@media(max-width: 575.98px){
+  .img-fotoPerfil{
+    max-width: 50vw;}
+
+  .logo{
+    padding-right: 3.5vw;}
+
+  .gear{
+    font-size: 8vw;}
+  
+  .justBeNice{
+    font-size: 11vw;
+    margin-left: 2vw;}  
+  
+  .logo a {
+    font-size: 7vw; } 
+  
+  // #proyectos {
+  //   display: grid;
+  //   grid-template-rows: 1fr;
+  //   grid-template-columns: 1fr;
+  //   justify-content: center;
+  //   margin-right: 20px;}
+
+  .proyecto {
+    width: 85vw;
+    height: auto;
+    // margin-left: 25px;
   }
 
-  @media(max-width: 575.98px){
-    .img-fotoPerfil{
-      max-width: 50vw;
-    }
+  .cajaFormulario {
+    max-width: 85vw;}
 
-    .logo{
-      padding-right: 3.5vw;
-    }
-
-    .gear{
-      font-size: 8vw;
-      }
-  
-    .justBeNice{
-      font-size: 11vw;
-      margin-left: 2vw;
-     }  
-  
-    .logo a {
-      font-size: 7vw; } 
-  
-    #proyectos {
-      display: grid;
-      grid-template-rows: 1fr;
-      grid-template-columns: 1fr;
-      justify-content: center;
-      margin-right: 20px;
-    }
-
-    .proyecto {
-      width: 85vw;
-      height: auto;
-      margin-left: 25px;
-    }
-
-    .cajaFormulario {
-      max-width: 85vw;
-    }
-
-    .desplazamiento{
-      animation-name: desplazamiento;
-      animation-duration: 1200ms;
-      animation-iteration-count: 1;
-      animation-timing-function: linear;
-    }
+  .desplazamiento{
+    animation-name: desplazamiento;
+    animation-duration: 1200ms;
+    animation-iteration-count: 1;
+    animation-timing-function: linear;}
     
-    @keyframes desplazamiento{
-      0%{
-        /* margin-left: 30vw; */
-        transform: rotate(360deg);
-      }
-      25%{
-        /* margin-left: 24vw; */
-        transform: rotate(270deg);
-      }
-      50%{
-        /* margin-left: 18vw; */
-        transform: rotate(180deg);
-      }
-      75%{
-        /* margin-left: 12vw; */
-        transform: rotate(90deg);
-      }
-      100%{
-        /* margin-left: 0vw; */
-        transform: rotate(0deg);
-      }
+  @keyframes desplazamiento{
+    0%{
+      /* margin-left: 30vw; */
+      transform: rotate(360deg);
     }
-
-    .logoFooter{
-      font-size: 10vw;
+    25%{
+      /* margin-left: 24vw; */
+      transform: rotate(270deg);
+    }
+    50%{
+      /* margin-left: 18vw; */
+      transform: rotate(180deg);
+    }
+    75%{
+      /* margin-left: 12vw; */
+      transform: rotate(90deg);
+    }
+    100%{
+      /* margin-left: 0vw; */
+      transform: rotate(0deg);
     }
   }
+
+  .logoFooter{
+    font-size: 10vw;
+  }
+}
