--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -87,7 +87,7 @@ $fuenteCuatro: "WebSymbolsRegular";
     font-family: 'Open Sans', sans-serif;
   }
   
-    .hoverMenu{
+  .hoverMenu{
     transition: all 300ms;
   }  
 
@@ -108,7 +108,12 @@ $fuenteCuatro: "WebSymbolsRegular";
     background-color: $colorCuatro;
     border-radius: 5px;
     overflow: hidden;
-  }  
+  }
+  
+  #portfolio{
+    font-family: $fuenteUno;
+    // text-transform: uppercase;
+  }
 
   .gear{
     font-family: "webSymbolsRegular";
@@ -118,11 +123,6 @@ $fuenteCuatro: "WebSymbolsRegular";
     text-shadow: 0px 0px 3px $colorCuatro;
     }
 
-  // .imgReact{
-  //   width: 6vw;
-  //   height: auto;
-  // }  
-  
   /*animación para hacer girar un elemento*/
   .rodar{
     animation-name: rodar;
@@ -274,7 +274,7 @@ $fuenteCuatro: "WebSymbolsRegular";
 }
 
 .titulo{
-  font-style: Arial, Helvetica, sans-serif;
+  font-style: $fuenteUno;
   font-style: italic;
   text-align: center;
   margin: 20px 0px 20px 0px;
@@ -370,7 +370,7 @@ $fuenteCuatro: "WebSymbolsRegular";
   text-decoration: none;
   color: $colorCuatro;
   font-size: 4vw;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: $fuenteUno;
   font-style: italic;
   font-weight: bold;
   font-size: 4.5vw;
