--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -7,8 +7,8 @@
     box-sizing: border-box;
   }
 
+/*Variables globales en CSS*/
 // :root {
-//   /*Variables globales en CSS*/
 //   --colorUno: #3c4146;
 //   --colorDos: #ccc;
 //   --colortres: #a8a8a8;
@@ -29,10 +29,21 @@ $colorGrisIntermedio: #a8a8a8; //sombras y titulos
 $colorMarronGris: #484848; //sombras y titulos
 $colorNaranjaClaro: #ffbe50; //naranja claro para algunos titulos y sombras
 $colorNaranjaFogata: rgba(255, 146, 3, 0.8); //naranja fogata para algunas sombras y titulos
-$colorAzulFuerte: rgb(13, 5, 90);
-$colorAzulClarito: #37bcf9;
-$colorAzulPetroleo: #00538c;
-/** Variables de colores a usar**/
+$colorAzulClarito: #37bcf9; //azul clarito
+$colorAzulPetroleo: #00538c; //azul petroleo, intermedio
+$colorAzulFuerte: rgb(13, 5, 90); //azul fuerte
+
+/*Variables de colores de Bootstrap*/
+$colorDark: #212529;
+$colorLight: #f8f9fa;
+$colorSuccess: #198754;
+$colorinfo: #0dcaf0;
+$colorWarning: #ffc107;
+$colorDanger: #dc3545;
+$colorPrimary: #0d6efd;
+$colorSecondary: #6c757d;
+
+/** Variables de colores a usar para mi proyecto**/
 /*Color del logo*/
 $colorUno: #3c4146;
 /* color de sombra del logo Portfolio, y titulos */
@@ -48,16 +59,6 @@ $colorSiete: #37bcf9;
 $colorOcho: rgb(13, 5, 90);
 $colorNueve: #00538c;
 
-/*Variables de colores de Bootstrap*/
-$colorDark: #212529;
-$colorLight: #f8f9fa;
-$colorSuccess: #198754;
-$colorinfo: #0dcaf0;
-$colorWarning: #ffc107;
-$colorDanger: #dc3545;
-$colorPrimary: #0d6efd;
-$colorSecondary: #6c757d;
-
 /** Variables de fuentes de letras **/
 $fuenteUno: "Nunito", sans-serif;
 $fuenteDos: "TrebuchetMS", sans-serif;
@@ -71,172 +72,157 @@ $fuenteCuatro: "WebSymbolsRegular";
     font-weight: normal;
     font-style: normal; }
   
-  @font-face {
-    font-family: "BebasNeue";
-    src: url(./fonts/BebasNeue/BebasNeue.otf);
-    font-weight: normal;
-    font-style: normal; }
-  
-  @font-face {
-    font-family: "WebSymbolsRegular";
-    src: url(./fonts/webSymbols/websymbols-regular-webfont.eot), url(./fonts/webSymbols/websymbols-regular-webfont.eot?#iefix) format("embedded-opentype"), url(./fonts/webSymbols/websymbols-regular-webfont.ttf) format("truetype"), url("./fonts/webSymbols/websymbols-regular-webfont.svg#WebSymbolsRegular") format("svg");
-    font-weight: normal;
-    font-style: normal; }  
-  
-  body {
-    font-family: 'Open Sans', sans-serif;
+@font-face {
+  font-family: "BebasNeue";
+  src: url(./fonts/BebasNeue/BebasNeue.otf);
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: "WebSymbolsRegular";
+  src: url(./fonts/webSymbols/websymbols-regular-webfont.eot), url(./fonts/webSymbols/websymbols-regular-webfont.eot?#iefix) format("embedded-opentype"), url(./fonts/webSymbols/websymbols-regular-webfont.ttf) format("truetype"), url("./fonts/webSymbols/websymbols-regular-webfont.svg#WebSymbolsRegular") format("svg");
+  font-weight: normal;
+  font-style: normal; }  
+
+//para que todas las letras en general tengan por defecto fuente 'Opens Sans'  
+body {
+  font-family: 'Open Sans', sans-serif;
+}
+/* clases para el header */  
+//efecto hover en el menú, para agrandar los items
+.hoverMenu{
+  transition: all 300ms;
+}  
+.hoverMenu:hover{
+  transform: scale(1.15, 1.15);
+}
+//clases para el logo: la rueda, 'Portfolio', y el emblema 'Just be nice'
+.logo {
+  display: flex;  
+  align-items: center;
+  margin-left: 3vw;
+  color: $colorTres;
+  padding-left: 1vw;
+  padding-right: 2vw;
+}
+.logo:hover{
+  background-color: $colorCuatro;
+  border-radius: 5px;
+  overflow: hidden;
+}
+//Id para trabajar exclusivamente el texto 'Portfolio'
+#portfolio{
+  font-family: $fuenteUno;
+  // text-transform: uppercase;
+}
+//Usando webSymbolsRegular => S = rueda
+.gear{
+  font-family: "webSymbolsRegular";
+  margin: 0 1.5vw 0 0;
+  font-size: 5vw;
+  color: $colorTres;
+  text-shadow: 0px 0px 3px $colorCuatro;
   }
-  
-  .hoverMenu{
-    transition: all 300ms;
-  }  
-
-  .hoverMenu:hover{
-    transform: scale(1.15, 1.15);
-  }  
-
-  .logo {
-    display: flex;  
-    align-items: center;
-    margin-left: 3vw;
-    color: $colorTres;
-    // text-transform: uppercase;
-    padding-left: 1vw;
-    padding-right: 2vw;}
-
-  .logo:hover{
-    background-color: $colorCuatro;
-    border-radius: 5px;
-    overflow: hidden;
+/* animaciones */
+/*animación para hacer girar un elemento*/
+.rodar{
+  animation-name: rodar;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}  
+@keyframes rodar{
+  from{
+    transform: rotateZ(0deg);
   }
-  
-  #portfolio{
-    font-family: $fuenteUno;
-    // text-transform: uppercase;
+  to{
+    transform: rotateZ(360deg);
   }
-
-  .gear{
-    font-family: "webSymbolsRegular";
-    margin: 0 1.5vw 0 0;
-    font-size: 5vw;
-    color: $colorTres;
-    text-shadow: 0px 0px 3px $colorCuatro;
-    }
-
-  /*animación para hacer girar un elemento*/
-  .rodar{
-    animation-name: rodar;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-  }  
-
-  @keyframes rodar{
-    from{
-      transform: rotateZ(0deg);
-    }
-    to{
-      transform: rotateZ(360deg);
-    }
+}
+//animación para hacer un elemento y que genere el efecto de desaparecer  
+.logo:hover .gear{
+  animation: cae 500ms linear;
+}
+@keyframes cae{
+  0%{
+    transform: translateY(0%);
   }
-  
-  .logo:hover .gear{
-    animation: cae 500ms linear;
+  50%{
+    transform: translateY(200%);
   }
+  100%{
+    transform: translateY(0%);
+  }
+}
+//clase para el emblema 'just be nice'  
+.justBeNice{
+  font-family: "webSymbolsRegular";
+  font-size: 7vw;
+  margin-left: 2vw;
+  font-weight: bold;
+  font-style: italic;
+  text-shadow: 2px 2px 5px $colorSeis; 
+}
+//animación para que algo venga con desplazamiento
+.desplazamiento{
+  animation-name: desplazamiento;
+  animation-duration: 800ms;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;
+}  
+@keyframes desplazamiento{
+  0%{
+    margin-left: 30vw;
+    transform: rotate(360deg);
+  }
+  25%{
+    margin-left: 24vw;
+    transform: rotate(270deg);
+  }
+  50%{
+    margin-left: 18vw;
+    transform: rotate(180deg);
+  }
+  75%{
+    margin-left: 12vw;
+    transform: rotate(90deg);
+  }
+  100%{
+    margin-left: 0vw;
+    transform: rotate(0deg);
+  }
+}
 
-  @keyframes cae{
-    0%{
-      transform: translateY(0%);
-    }
-    50%{
-      transform: translateY(200%);
-    }
-    100%{
-      transform: translateY(0%);
-    }
-  }
-  
-  .justBeNice{
-    font-family: "webSymbolsRegular";
-    font-size: 7vw;
-    margin-left: 2vw;
-    font-weight: bold;
-    font-style: italic;
-    text-shadow: 2px 2px 5px $colorSeis; }
-
-  .desplazamiento{
-    animation-name: desplazamiento;
-    animation-duration: 800ms;
-    animation-iteration-count: 1;
-    animation-timing-function: linear;
-  }
-  
-  @keyframes desplazamiento{
-    0%{
-      margin-left: 30vw;
-      transform: rotate(360deg);
-    }
-    25%{
-      margin-left: 24vw;
-      transform: rotate(270deg);
-    }
-    50%{
-      margin-left: 18vw;
-      transform: rotate(180deg);
-    }
-    75%{
-      margin-left: 12vw;
-      transform: rotate(90deg);
-    }
-    100%{
-      margin-left: 0vw;
-      transform: rotate(0deg);
-    }
-  }
-
-  /*Transición*/
+/*Transición para agrandar los items*/
 .trans {
   transition: all 1s;
 }
-
 .trans:hover {
   transform: scale(1.1);
 }
-
-  .logo a {
-    text-decoration: none;
-    color: $colorDark;
-    font-size: 6vw;
-    font-family: Arial, Helvetica, sans-serif;
-    font-style: italic;
-    font-weight: bold;
-    font-size: 4.5vw;
-    text-shadow: 2px 2px 5px $colorCuatro; }
-  
-  .logo:hover a{
-    animation: fromRight 300ms linear;
+//clase para el logo y a
+.logo a {
+  text-decoration: none;
+  color: $colorDark;
+  font-size: 6vw;
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 4.5vw;
+  text-shadow: 2px 2px 5px $colorCuatro; }
+//efecto hover para el logo y a con animación  
+.logo:hover a{
+  animation: fromRight 300ms linear;
+}  
+@keyframes fromRight{
+  from{
+    transform: translateX(200%);
   }
-  
-  @keyframes fromRight{
-    from{
-      transform: translateX(200%);
-    }
-    to{
-      transform: translateX(0%);
-    }
+  to{
+    transform: translateX(0%);
   }
-
-  // .aboutMe{
-  //   display: flex;
-  //   flex-flow: row;
-  //   justify-content: center;
-  //   align-items: center;
-  //   text-align: center;
-  //   width: 100vw;
-  //   height: auto;
-  //   border-radius: 5px;
-  //   margin-top: 1vh;
-  // }  
+}
+/* fin de animaciones y clases e id para el header*/
 
 /* Sección Acerca de */
 .img-fotoPerfil{
@@ -282,7 +268,8 @@ $fuenteCuatro: "WebSymbolsRegular";
   color: $colorTres ;
   padding: 10px;
 } 
-
+/* Sección de los proyectos */
+//id para estructurar la organización de los proyectos en general
 #proyectos {
   display: flex;
   flex-flow: row wrap;
@@ -296,7 +283,7 @@ $fuenteCuatro: "WebSymbolsRegular";
   // justify-content: center;
   margin: 0 auto; 
 }
-  
+//clase para darle forma a casa proyecto  
 .proyecto{
   display: flex;
   width: 30%;
@@ -309,19 +296,20 @@ $fuenteCuatro: "WebSymbolsRegular";
   border-radius: 5px;
   box-shadow: 0px 0px 5px $colorCuatro inset;
 }
-
+//clase para la imagen de cada proyecto
 .img {  /*640 ancho x 426 alto*/
   width: 100%;
   height: auto;
   padding: 5px;
   border-radius: 10px; }
-
+//clase para la información de cada proyecto
 .info{
   font-style: var(--fuenteDos);
   line-height: 10px;
   margin: 15px 0px 15px 0px;    
 }
 
+/* clases para la sección de contacto */
 .cajaFormulario {
   margin-bottom: 2rem;
   border-radius: 10px;
@@ -346,7 +334,8 @@ $fuenteCuatro: "WebSymbolsRegular";
 .btnColorDos:hover{
     background-color: $colorCuatro;
 }
- 
+
+/* clases para el footer */
 #footer {
  max-width: 100vw;
  height: 25vh;
@@ -387,16 +376,15 @@ $fuenteCuatro: "WebSymbolsRegular";
   align-items: center;
   padding: 2vh;}
 
+/* media querys para una mejor adaptación */
+//media query específica  
 @media(max-width: 1200px){
   .proyecto{
     width: 40%;
   }
 }  
-
+//media query para tablets
 @media(max-width: 991.98px){
-  // .img-fotoPerfil{
-  //   max-width: 35vw;}
-    
   /*Para sacar la transformación de los items del menú*/
   .hoverMenu{
     transition: none;}  
@@ -417,12 +405,6 @@ $fuenteCuatro: "WebSymbolsRegular";
   .logo a {
     font-size: 5.5vw; }
 
-  // #proyectos {
-  //   display: grid;
-  //   grid-template-rows: repeat(2, 1fr);
-  //   grid-template-columns: repeat(2,1fr);
-  // }
-
   .proyecto{
     width: 45%;
   }
@@ -433,13 +415,13 @@ $fuenteCuatro: "WebSymbolsRegular";
   .logoFooter{
     font-size: 6vw;}  
 }
-
+//media query para dispositivos entre tablets y mobile
 @media(max-width: 768px){
   .proyecto{
     width: 75%;
   }
 }
-
+//media query para mobile
 @media(max-width: 575.98px){
   .img-fotoPerfil{
     max-width: 50vw;}
@@ -456,13 +438,6 @@ $fuenteCuatro: "WebSymbolsRegular";
   
   .logo a {
     font-size: 7vw; } 
-  
-  // #proyectos {
-  //   display: grid;
-  //   grid-template-rows: 1fr;
-  //   grid-template-columns: 1fr;
-  //   justify-content: center;
-  //   margin-right: 20px;}
 
   .proyecto {
     width: 85vw;
@@ -473,12 +448,16 @@ $fuenteCuatro: "WebSymbolsRegular";
   .cajaFormulario {
     max-width: 85vw;}
 
+    .logoFooter{
+      font-size: 10vw;
+    }
+
+  //cambiando la animación de desplazamiento en Mobile, para adaptarla
   .desplazamiento{
     animation-name: desplazamiento;
     animation-duration: 1200ms;
     animation-iteration-count: 1;
     animation-timing-function: linear;}
-    
   @keyframes desplazamiento{
     0%{
       /* margin-left: 30vw; */
@@ -500,9 +479,5 @@ $fuenteCuatro: "WebSymbolsRegular";
       /* margin-left: 0vw; */
       transform: rotate(0deg);
     }
-  }
-
-  .logoFooter{
-    font-size: 10vw;
   }
 }
