mejorando los estilos

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -32,6 +32,7 @@ $colorNaranjaFogata: rgba(255, 146, 3, 0.8); //naranja fogata para algunas sombr
 $colorAzulClarito: #37bcf9; //azul clarito
 $colorAzulPetroleo: #00538c; //azul petroleo, intermedio
 $colorAzulFuerte: rgb(13, 5, 90); //azul fuerte
+$colorAzulNegro: #002538; //Color azul llegando al negro
 
 /*Variables de colores de Bootstrap*/
 $colorDark: #212529;
