--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -5,21 +5,7 @@
     margin: 0px;
     padding: 0px; 
     box-sizing: border-box;
-  }
-
-/*Variables globales en CSS*/
-// :root {
-//   --colorUno: #3c4146;
-//   --colorDos: #ccc;
-//   --colortres: #a8a8a8;
-//   --colorCuatro: #484848;
-//   --colorCinco: #ffbe50; //naranja claro
-//   --colorSeis: rgba(255, 146, 3, 0.8); //naranja fogata
-//   --colorSiete: rgb(13, 5, 90);
-//   --colorOcho: #37bcf9;
-//   --colorNueve: #00538c;
-//   --fuenteUno: "Nunito", sans-serif;
-//   --fuenteDos: "TrebuchetMS", sans-serif; }    
+  }    
 
 /***** Variables globales en SASS *****/
 /** Variables de colores personalizados **/
@@ -55,10 +41,6 @@ $colorTres: rgb(13, 5, 90);
 $colorCuatro: #ccc;
 $colorCinco: #a8a8a8;
 $colorSeis: #484848;
-/*otros colores alternativos*/
-// $colorSiete: #37bcf9;
-// $colorOcho: rgb(13, 5, 90);
-// $colorNueve: #00538c;
 
 /** Variables de fuentes de letras **/
 $fuenteUno: "Nunito", sans-serif;
@@ -196,7 +178,7 @@ body {
 
 /*Transición para agrandar los items*/
 .trans {
-  transition: all 1s;
+  transition: 1s all;
 }
 .trans:hover {
   transform: scale(1.1);
@@ -228,7 +210,7 @@ h1{
   font-family: $fuenteUno;
   margin: 2rem 0.75rem ;
 }
-/* fin de animaciones y clases e id para el header*/
+/* fin de animaciones, etiquetas, clases e id para el header*/
 
 /* Sección Acerca de */
 .img-fotoPerfil{
@@ -306,6 +288,11 @@ h1{
   border: 2px solid $colorCuatro;
   border-radius: 5px;
   box-shadow: 0px 0px 5px $colorCuatro inset;
+  transition: 1s all;
+}
+//para dar opacidad a los proyectos cuando pasen el mouse
+.proyecto:hover{
+  opacity: 0.6;
 }
 //clase para la imagen de cada proyecto
 .img {  /*640 ancho x 426 alto*/
@@ -321,38 +308,40 @@ h1{
 }
 
 /* clases para la sección de contacto */
+//para darle estructura al formulario y sombreado
 .cajaFormulario {
   margin-bottom: 2rem;
   border-radius: 10px;
   box-shadow: 5px 5px 15px 5px #484848;
   max-width: 50vw;
 }
-
+//botón de enviar
 .btnColorUno{
     background-color: $colorTres;
     font-family: $fuenteUno;
 }
-
+//hover en botón de enviar
 .btnColorUno:hover{
     background-color: $colorDos;
 }
-
+//botón de resetear
 .btnColorDos{
     background-color: $colorCinco;
     font-family: $fuenteUno;
 }
-
+//hover en el botón de resetear
 .btnColorDos:hover{
     background-color: $colorCuatro;
 }
 
 /* clases para el footer */
+//id para darle estructura al footer
 #footer {
  max-width: 100vw;
  height: 25vh;
 //  border-top: 2px solid $colorTres; 
 } 
-
+//para darle formato a los iconos de las redes sociales
 .icono {
  height: 7vh;
  width: auto;
