--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -31,17 +31,19 @@ $colorPrimary: #0d6efd;
 $colorSecondary: #6c757d;
 
 /** Variables de colores a usar para mi proyecto**/
-/*Color del logo*/
-$colorUno: #3c4146;
-/* color de sombra del logo Portfolio, y titulos */
-$colorDos: #00538c;
-/* color del botón enviar, simbolo 1 y sombra del simbolo 2 */
-$colorTres: rgb(13, 5, 90);
+/*Color de Portfolio header y h1 con frase*/
+$colorUno: #212529;
+/* color del simbolo 1, sombra del simbolo 2 y botón enviar*/
+$colorDos: rgb(13, 5, 90);
+/* color de titulos, hover enviar y hover Portfolio */
+$colorTres: #00538c;
 /*Colores de sombras*/
 $colorCuatro: #ccc;
 $colorCinco: #a8a8a8;
 $colorSeis: #484848;
-
+$colorSiete: #3c4146;
+/*Color los background del header, titulos y footer*/
+$colorContenedor: #f8f9fa;
 /** Variables de fuentes de letras **/
 $fuenteUno: "Nunito", sans-serif;
 $fuenteDos: "TrebuchetMS", sans-serif;
@@ -71,7 +73,11 @@ $fuenteCuatro: "WebSymbolsRegular";
 body {
   font-family: 'Open Sans', sans-serif;
 }
-/* clases para el header */  
+/* clases para el header */
+//id para el nav
+#nav{
+  background-color: $colorContenedor;
+}  
 //efecto hover en el menú, para agrandar los items
 .hoverMenu{
   transition: all 300ms;
@@ -84,7 +90,7 @@ body {
   display: flex;  
   align-items: center;
   margin-left: 3vw;
-  color: $colorTres;
+  color: $colorDos;
   padding-left: 1vw;
   padding-right: 2vw;
 }
@@ -103,7 +109,7 @@ body {
   font-family: "webSymbolsRegular";
   margin: 0 1.5vw 0 0;
   font-size: 5vw;
-  color: $colorTres;
+  color: $colorDos;
   text-shadow: 0px 0px 3px $colorCuatro;
   }
 /* animaciones */
@@ -175,7 +181,6 @@ body {
     transform: rotate(0deg);
   }
 }
-
 /*Transición para agrandar los items*/
 .trans {
   transition: 1s all;
@@ -186,7 +191,7 @@ body {
 //clase para el logo y a
 .logo a {
   text-decoration: none;
-  color: $colorDark;
+  color: $colorUno;
   font-size: 6vw;
   font-family: Arial, Helvetica, sans-serif;
   font-style: italic;
@@ -205,43 +210,46 @@ body {
     transform: translateX(0%);
   }
 }
-
+//etiqueta para el h1
 h1{
   font-family: $fuenteUno;
+  color: $colorUno;
+  text-align: center;
   margin: 2rem 0.75rem ;
 }
 /* fin de animaciones, etiquetas, clases e id para el header*/
 
 /* Sección Acerca de */
+//clase para todos los titulos de cada sección
+.titulo{
+  font-style: $fuenteUno;
+  font-style: italic;
+  text-align: center;
+  margin: 20px 0px 20px 0px;
+  background-color: $colorContenedor;
+  color: $colorTres;
+  padding: 1rem;
+}
 .img-fotoPerfil{
   max-width: 25vw;
 }
 
-.acerca-de .foto .nombre {
-	color: #545454;
-	font-weight: 3000;
-	letter-spacing: 1.5px;
-}
-
-.acerca-de .infoAcercaDe .titulo {
-	color: #545454;
-	font-weight: 100;
-	margin-bottom: 1.5rem;
-}
-
-.acerca-de .infoAcercaDe .resumen {
+.acercaDe .foto .nombre {
+	color: $colorSiete;
+  font-size: 18px;
+	font-weight: 1200;
+  margin-bottom: 8px;
 	letter-spacing: 1px;
 }
 
-.acerca-de .infoAcercaDe {
-	font-size: 18px;
+.acercaDe .infoAcercaDe{
+	color: $colorSiete;
 	font-weight: 600;
-	color: #545454;
-	margin-bottom: 10px;
+	margin-bottom: 1.25rem;
 }
 
-.nombre{
-  font-size: 1.5rem;
+.acercaDe .infoAcercaDe .resumen {
+	letter-spacing: 1px;
 }
 
 .resumen{
@@ -249,17 +257,8 @@ h1{
 }
 
 .habilidades{
-	color: $colorDos;
-}
-
-.titulo{
-  font-style: $fuenteUno;
-  font-style: italic;
-  text-align: center;
-  margin: 20px 0px 20px 0px;
-  background-color: $colorLight;
-  color: $colorDos ;
-  padding: 1rem;
+  margin-top: 1.5rem;
+	color: $colorTres;
 } 
 /* Sección de los proyectos */
 //id para estructurar la organización de los proyectos en general
@@ -307,31 +306,31 @@ h1{
   margin: 15px 0px 15px 0px;    
 }
 
-/* clases para la sección de contacto */
+/*clases para la sección de contacto*/
 //para darle estructura al formulario y sombreado
 .cajaFormulario {
   margin-bottom: 2rem;
   border-radius: 10px;
-  box-shadow: 5px 5px 15px 5px #484848;
+  box-shadow: 5px 5px 15px 10px $colorCinco;
   max-width: 50vw;
 }
 //botón de enviar
 .btnColorUno{
-    background-color: $colorTres;
+    background-color: $colorDos;
     font-family: $fuenteUno;
 }
 //hover en botón de enviar
 .btnColorUno:hover{
-    background-color: $colorDos;
+    background-color: $colorTres;
 }
 //botón de resetear
 .btnColorDos{
-    background-color: $colorCinco;
+    background-color: $colorSiete;
     font-family: $fuenteUno;
 }
 //hover en el botón de resetear
 .btnColorDos:hover{
-    background-color: $colorCuatro;
+    background-color: $colorSeis;
 }
 
 /* clases para el footer */
@@ -339,7 +338,7 @@ h1{
 #footer {
  max-width: 100vw;
  height: 25vh;
-//  border-top: 2px solid $colorTres; 
+ background-color: $colorContenedor; 
 } 
 //para darle formato a los iconos de las redes sociales
 .icono {
@@ -368,7 +367,7 @@ h1{
 
 .logoFooter:hover{
   color: $colorDos;
-  text-shadow: 2px 2px 5px $colorTres; }
+  text-shadow: 2px 2px 5px $colorDos; }
   
 .pie{
   display: flex;
