mejorando los estilos y la maquetación

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,20 +58,14 @@ body {
   padding-right: 2vw; }
 
 .logo:hover {
-  background-color: #ccc;
+  color: #484848;
   border-radius: 5px;
   overflow: hidden; }
-
-#portfolio {
-  font-family: "Nunito", sans-serif;
-  color: #a8a8a8;
-  text-shadow: 2px 2px 5px #484848; }
 
 .gear {
   font-family: "webSymbolsRegular";
   margin: 0 1.5vw 0 0;
-  font-size: 5vw;
-  color: #0d055a;
+  font-size: 8vh;
   text-shadow: 0px 0px 3px #ccc; }
 
 /* animaciones */
@@ -99,10 +93,30 @@ body {
   100% {
     transform: translateY(0%); } }
 
+.logo a {
+  text-decoration: none;
+  color: #0d055a;
+  font-family: "Nunito", sans-serif;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 3.5vh;
+  text-shadow: 2px 2px 5px #ccc; }
+
+.logo:hover a {
+  animation: fromRight 300ms linear;
+  color: #484848; }
+
+@keyframes fromRight {
+  from {
+    transform: translateX(200%); }
+  to {
+    transform: translateX(0%); } }
+
 .justBeNice {
   font-family: "webSymbolsRegular";
-  font-size: 7vw;
+  font-size: 12vh;
   margin-left: 2vw;
+  margin-bottom: 1.9rem;
   font-weight: bold;
   font-style: italic;
   text-shadow: 7px 7px 15px #6c757d; }
@@ -137,28 +151,6 @@ body {
 .trans:hover {
   transform: scale(1.1); }
 
-.logo a {
-  text-decoration: none;
-  color: #212529;
-  font-size: 6vw;
-  font-family: Arial, Helvetica, sans-serif;
-  font-style: italic;
-  font-weight: bold;
-  font-size: 4.5vw;
-  text-shadow: 2px 2px 5px #ccc; }
-
-.logo:hover a {
-  animation: fromRight 300ms linear; }
-
-@keyframes fromRight {
-  from {
-    transform: translateX(200%); }
-  to {
-    transform: translateX(0%); } }
-
-#portfolio:hover {
-  color: #0d055a; }
-
 .nav-item a:hover {
   text-decoration: underline; }
 
@@ -166,8 +158,7 @@ body {
 h1 {
   font-family: "Nunito", sans-serif;
   color: #212529;
-  text-align: center;
-  margin: 2rem 0.75rem; }
+  text-align: start; }
 
 /* Sección Acerca de */
 .titulo {
@@ -179,8 +170,9 @@ h1 {
   color: #00538c;
   padding: 1rem; }
 
-.imgFotoPerfil {
-  max-width: 25vw; }
+.presentacion {
+  display: flex;
+  margin: 0 0 0 5rem; }
 
 .acercaDe .foto .nombre {
   color: #3c4146;
@@ -189,16 +181,23 @@ h1 {
   margin-bottom: 8px;
   letter-spacing: 1px; }
 
-.acercaDe .infoAcercaDe {
-  color: #3c4146;
-  font-weight: 600;
-  margin-bottom: 1.25rem; }
+.infoAcercaDe {
+  order: 1; }
 
-.acercaDe .infoAcercaDe .resumen {
-  letter-spacing: 1px; }
+.foto {
+  order: 2; }
+
+.imgFotoPerfil {
+  max-width: 27vw; }
 
 .resumen {
-  font-size: 1.5rem; }
+  font-size: 1.5rem;
+  letter-spacing: 1px; }
+
+.sobreMi {
+  display: flex;
+  flex-direction: column;
+  justify-content: start; }
 
 .habilidades {
   margin-top: 1.5rem;
@@ -303,7 +302,9 @@ h1 {
 /* media querys para una mejor adaptación */
 @media (max-width: 1200px) {
   .proyecto {
-    width: 40%; } }
+    width: 40%; }
+  .justBeNice {
+    margin-bottom: 1.9rem; } }
 
 @media (max-width: 991.98px) {
   /*Para sacar la transformación de los items del menú*/
@@ -314,12 +315,25 @@ h1 {
   .logo {
     padding-right: 3vw; }
   .gear {
-    font-size: 7vw; }
+    font-size: 7vh; }
   .justBeNice {
-    font-size: 10vw;
-    margin-left: 2vw; }
+    font-size: 14vh;
+    margin-left: 2vw;
+    margin-bottom: 1.8rem; }
   .logo a {
-    font-size: 5.5vw; }
+    font-size: 6vw; }
+  .logo a p {
+    font-size: 4vh; }
+  .presentacion {
+    display: flex;
+    flex-direction: column;
+    margin: 0 2rem 0 2rem; }
+  .nombre {
+    display: none; }
+  .foto {
+    order: 1; }
+  .infoAcercaDe {
+    order: 2; }
   .resumen {
     font-size: 1.25rem; }
   .proyecto {
@@ -330,23 +344,30 @@ h1 {
     font-size: 6vw; } }
 
 @media (max-width: 768px) {
+  #portfolio {
+    font-size: 1.75rem; }
   .proyecto {
     width: 75%; }
   .imgFotoPerfil {
-    max-width: 40vw; } }
+    max-width: 40vw; }
+  .justBeNice {
+    margin-bottom: 1.7rem; } }
 
 @media (max-width: 575.98px) {
+  #portfolio {
+    font-size: 1.25rem; }
   .imgFotoPerfil {
     max-width: 50vw; }
   .logo {
     padding-right: 3.5vw; }
   .gear {
-    font-size: 8vw; }
+    font-size: 5vh; }
   .justBeNice {
-    font-size: 11vw;
-    margin-left: 2vw; }
-  .logo a {
-    font-size: 7vw; }
+    font-size: 10vh;
+    padding-left: 0.5rem;
+    margin-bottom: 1.5rem; }
+  .logo a p {
+    font-size: 3vh; }
   .proyecto {
     width: 85vw;
     height: auto; }
